added navbar and did some styling

--- a/index.html
+++ b/index.html
@@ -10,11 +10,22 @@
 </head>
 <body>
 
+<!---Navbar--->
+<nav class="navbar fixed-bottom navbar-dark bg-primary">
+    <div class="container-fluid">
+        <a class="profile-picture">
+            <img src="https://www.pngfind.com/pngs/m/610-6104451_image-placeholder-png-user-profile-placeholder-image-png.png" alt="" width="30" height="24">
+        </a>
+        <a class="navbar-brand" href="#">Arlen Codes</a>
+    </div>
+</nav>
+
+
 <!---Jumbotron--->
 <div class="container-fluid">
     <div class="jumbotron rounded m-5 bg-white">
         <h1 class="display-4 text-center">Hi my name is Arlen!</h1>
-        <p class="lead text-center">Let's get you in a new shell!</p>
+        <p class="lead text-center">Mauris tristique posuere ligula.</p>
         <hr class="my-4">
         <p>A Little About Me:</p>
         <p>Mauris tristique posuere ligula. Ut sit amet lorem convallis, luctus nulla et, gravida arcu.
