changed the layout

--- a/index.html
+++ b/index.html
@@ -11,34 +11,21 @@
 <body>
 
 <!---Navbar--->
-<nav class="navbar fixed-bottom navbar-dark bg-primary">
+<nav class="navbar fixed-top pb-6 navbar-dark bg-primary">
     <div class="container-fluid">
         <a class="profile-picture">
-            <img src="https://www.pngfind.com/pngs/m/610-6104451_image-placeholder-png-user-profile-placeholder-image-png.png" alt="" width="30" height="24">
+            <img src="https://www.pngfind.com/pngs/m/610-6104451_image-placeholder-png-user-profile-placeholder-image-png.png" alt="" width="30" height="30">
         </a>
         <a class="navbar-brand" href="#">Arlen Codes</a>
     </div>
 </nav>
 
 
-<!---Jumbotron--->
-<div class="container-fluid">
-    <div class="jumbotron rounded m-5 bg-white">
-        <h1 class="display-4 text-center">Hi my name is Arlen!</h1>
-        <p class="lead text-center">Mauris tristique posuere ligula.</p>
-        <hr class="my-4">
-        <p>A Little About Me:</p>
-        <p>Mauris tristique posuere ligula. Ut sit amet lorem convallis, luctus nulla et, gravida arcu.
-            Proin felis elit, auctor id lectus vel, rhoncus accumsan tellus. Pellentesque id viverra libero.
-            Vivamus sagittis malesuada fermentum. Nullam hendrerit nulla ac lobortis laoreet. Sed vulputate dui
-            et felis commodo maximus. Praesent ac pulvinar erat, nec convallis velit. Sed ut lacus quis dui porta
-            hendrerit id a sem. Vestibulum venenatis eros eu leo scelerisque ultricies. Duis semper urna a dui
-            dignissim, sed tristique quam cursus. Vestibulum nisi ante, vehicula eget mollis sit amet, fringilla et
-            nisl. Phasellus sed risus non urna cursus laoreet eget et est. Cras aliquet justo non lacus dictum congue.
-            Sed mollis eros id mauris ultricies, sit amet consequat justo molestie. Integer aliquet velit augue, eget
-            mattis orci cursus eget.</p>
-    </div>
+<!---About Me--->
+<div class="bd-gutter m-3 p-2 rounded bg-light text-dark border border-primary border-5">
+    <p class="fs-1 text-center">hello matt.</p>
 </div>
+
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
