removed fixed navbar

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <!---Navbar--->
-<nav class="navbar fixed-top pb-6 navbar-dark bg-primary">
+<nav class="navbar pb-6 navbar-dark bg-primary">
     <div class="container-fluid">
         <a class="profile-picture">
             <img src="https://www.pngfind.com/pngs/m/610-6104451_image-placeholder-png-user-profile-placeholder-image-png.png" alt="" width="30" height="30">
